@@ -11,6 +11,7 @@
 </DL>
 <DL>
 <DT><I>STANDARD OPTIONS</I></DT>
+<DT><I>Not themed</I></DT>
 <DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="options.htm#M-background">-background or -bg</A></TD>
@@ -18,6 +19,16 @@
 </TR>
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="options.htm#M-relief">-relief</A></TR>
+</TABLE></DD>
+<DT><I>Themed</I></DT>
+<DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-borderwidth">-borderwidth or -bd</A></TD>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-relief">-relief</A></TD>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;(<B>-bg</B> has no effect)</TD>
+</TR>
 </TABLE></DD>
 </DL>
 <DL>
@@ -100,7 +111,8 @@ Possible values are: <B>ne</B>, <B>en</B>, <B>nw</B>, <B>wn</B>, <B>se</B> (defa
 <DD>
 
 Size of the scrollbars in pixels.
-Use </B>0</B> for standard size (default value).
+Use </B>0</B> for standard size (default value).<BR>
+This option has no effect if widget is <I>themed</I>.
 </DD>
 </DL>
 <HR WIDTH="50%"><BR>
