@@ -1,3 +1,8 @@
+2010-11-23 Harald Oehlmann <oehhar@users.sourceforge.net>
+
+	* scrollw.tcl Add theming support for ScrolledWindow widget.
+	* ScrolledWindow.html Themed mode documented.
+
 2010-11-21 Harald Oehlmann <oehhar@users.sourceforge.net>
 
 	* label.tcl Add theming support for Label widget.
